refactor(cache): 移除 VeloCacheAutoConfiguration 及相关 Redis 缓存配置
- 删除 VeloCacheAutoConfiguration 类及其 RedisCacheManager 配置，简化缓存自动配置逻辑
- 移除 Redis 缓存相关自动配置类，优化依赖管理和初始化顺序

fix(core): 优化 WebUtilsSupport 中文件名编码处理

- 采用标准 UTF-8 编码方式捕获异常，避免抛出不支持的编码异常
- 修正文件名编码后替换空格的实现，保持兼容性

feat(core): VeloBannerPrinter 支持更精细的时间格式展示

- 增加对纳秒级别时间格式的处理
- 支持毫秒级别和带小数的秒数格式输出，提高展示精度

feat(core): 新增 VeloPropertiesWarningLogger Bean 自动注入

- 在 VeloCoreAutoConfiguration 中注册 VeloPropertiesWarningLogger，便于属性配置警告记录

feat(excel): 完善 EasyExcel、FastExcel 和 Fesod Excel 全局默认转换器注册支持

- 新增全局默认转换器注册方法，桥接三大 Excel 库内部 DefaultConverterLoader
- 修正转换器中对于空字符串和 null 的判空逻辑，避免异常抛出
- 注释说明版本升级时需同步检查反射签名的细节

refactor(idempotent,lock,ratelimit): 移除基于 Redis 的自动配置类，优化配置依赖关系

- 删除 VeloIdempotentRedisAutoConfiguration、VeloLockRedisAutoConfiguration 和 VeloRateLimitRedisAutoConfiguration 类
- 调整自动配置顺序，增加 afterName 指定确保依赖加载顺序正确
- 精简相关模块依赖，防止 Redis 配置冲突

refactor(redis): 移除 VeloRedisAutoConfiguration 相关 Redis 自动配置

- 删除 VeloRedisAutoConfiguration 类，避免与 Spring Boot RedisAutoConfiguration 冲突
- 清理 RedisTemplate 和相关序列化配置，简化自动配置逻辑

refactor(spi): 优化 SpelFingerprinter 解析器缓存实现

- 使用 LinkedHashMap 实现 LRU 缓存，限制缓存大小为 256 条
- 添加同步锁保护缓存操作保证线程安全
- 对 SpEL 表达式解析结果做非空校验，防止空值异常

refactor(util): 优化 InvocationUtils.isLoggableValue 方法，防止循环引用和栈溢出

- 增加访问记录集避免循环引用导致无限递归
- 限制最大递归深度为 32 层，保护调用栈
- 细化数组、集合与 Map 递归判定逻辑，增加深度和访问记录参数传递

test(cache): 优化 RedisCacheTimeMapProviderTest 使用 LinkedHashMap 保持顺序

- 替换 Map.of 为 LinkedHashMap 保持插入顺序，确保测试行为一致

test(cache): 修正 VeloCacheAutoConfigurationTests 中自动配置引用

- 把测试中对 VeloCacheAutoConfiguration 的引用改为 VeloCacheConfiguration，确保正确加载配置@ComponentScan范围内类